--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GIT_TOKEN }}
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
