--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1 
         with:
@@ -29,8 +35,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          secrets: |
-            GIT_AUTH_TOKEN=${{ secrets.GIT_TOKEN }}
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
